--- a/style.css
+++ b/style.css
@@ -1,58 +1,80 @@
-
-
-
-
-
-
-body{
-    font-family: "moonspace", sans-serif;
+body {
+  font-family: "moonspace", sans-serif;
 }
 
 .font-primary {
-    color:#00ABAB
+  color: #00abab;
 }
 
-.title.icon{
-    font-size: 20px;
-    font-weight: bold;
+.title.icon {
+  font-size: 20px;
+  font-weight: bold;
 }
 
+p {
+  font-size: 14px;
+}
 
+h2 {
+  font-weight: bold;
+  font-size: 23px;
+  margin-bottom: 20px;
+}
 
-
-
-
+a.font-black {
+  color: #000;
+}
 
 #about {
-    margin: 60px auto;
-    max-width: 400px;
-    text-align: center;
-
+  margin: 60px auto;
+  max-width: 400px;
+  text-align: center;
 }
 
-#about img{
-    border-radius: 50%;
-    width: 120px;
-    margin-bottom: 10px;
+#about img {
+  border-radius: 50%;
+  width: 120px;
+  margin-bottom: 10px;
 }
 
-#about .name{
-    font-size: 19px;    
+#about .name {
+  font-size: 19px;
 }
 
-#about .vocation{
-    font-size: 17px;
-    color: #00ABAB
-    margin-bottom: 10px;
+#about .vocation {
+  font-size: 17px;
+  color: #00abab;
+  margin-bottom: 10px;
 }
 
-#about .skills{
-    font-size: 14px;
-    color: #00ABAB;
-    margin-bottom: 10px;
+#about .skills {
+  font-size: 14px;
+  color: #00abab;
+  margin-bottom: 10px;
 }
-#about .email{
-    margin-top : 14px
-    font-size : 30px
-    
+#about .email {
+  margin-top: 14px font-size 30px;
+}
+
+/******
+project
+*****/
+
+#project {
+  margin: 60 px auto;
+  width: 80%;
+}
+#project h2 {
+  text-align: center;
+}
+#project .card img {
+  width: 100%;
+}
+
+#project .card img {
+  width: 100%;
+}
+
+#project.card-title {
+  font-weight: bold;
 }
